--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Erika Nails</title>
 
     <!-- Archivos css -->
     <link rel="stylesheet" href="./css/configuracion.css">
@@ -19,19 +19,23 @@
 </head>
 <body>
     
+   
+    <!--Header-->
     <header>
         <nav>
             <img src="https://raw.githubusercontent.com/jefuentes80/IMAGENES/main/ico/Home.png" alt="">
              <a href="">Servicios</a>
              <a href="">Galería</a>
+             <a href="">Contáctanos</a>
         </nav>
-        <a href="">Contáctos</a>
     </header>
+    <!--cuerpo de la página-->
+<div>
+<img src="https://i.imgur.com/oXClgyR.png">
+</div>
 
-    <section>
-        
-    </section>
-
+    <img src="https://i.imgur.com/pKvHFSc.png" class="logo">
+    <img src="https://i.imgur.com/hnlhjGw.png" class="frase">
 
     <!-- Archivo de programación -->
     <script src="./js/Main.js" type="module"></script>
