--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 
 
 </head>
@@ -35,8 +38,10 @@
 </div>
 
     <img src="https://i.imgur.com/pKvHFSc.png" class="logo">
-    <img src="https://i.imgur.com/hnlhjGw.png" class="frase">
-
+    <img src="https://i.imgur.com/rMMjU8r.png" class="frase">
+    <a href="" class="botón">
+    <p>Conócenos</p>
+    </a>
     <!-- Archivo de programación -->
     <script src="./js/Main.js" type="module"></script>
 </body>
