--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <img src="https://i.imgur.com/pKvHFSc.png" class="logo">
     <img src="https://i.imgur.com/rMMjU8r.png" class="frase">
-    <a href="" class="botón">
+    <a href="" class="boton">
     <p>Conócenos</p>
     </a>
     <!-- Archivo de programación -->
